<package>
  <name>atrv</name>
  <version>1.1.1</version>
  <description>ROS adaptations of the ATRV driver.</description>
  <author>John Folkesson!!</author>
   <maintainer email="johnf@kth.se">John Folkesson!!</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/rflex</url>
  <!-- <url type="bugtracker"></url> -->

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
